# comic_ocr

./: .gitignore  README.md  config.toml  pyproject.toml  requirements.txt  todo
assets/fonts/unifont/: LICENSE
comic_ocr/: evaluate.py  generate_detection_dataset.py  generate_recognition_dataset.py  generate_vocab_file.py  inspect_gen.py  inspect_model.py  ocr.py  train_detection.py  update_dataset.py
comic_ocr/lib/: config.py  detection.py  generate_bubbles.py  generate_panels.py  generate_text.py  inference_utils.py  label_utils.py  recognition.py  render_page.py
src/: evaluate.py  generate_dataset.py  generate_detection_dataset.py  generate_recognition_dataset.py  generate_vocab_file.py  inspect_gen.py  inspect_model.py  ocr.py  test.py  train_detection.py  train_recognition.py  update_dataset.py
src/lib/: config.py  constants.py  detection.py  doctr_utils.py  generate_bubbles.py  generate_panels.py  generate_text.py  inference_utils.py  label_utils.py  misc_utils.py  paths.py  recognition.py  render_page.py
