[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ocr_data_genie"
version = "0.0.1"
# readme = "README.md"
requires-python = ">=3.8"
# classifiers = [
#     "Programming Language :: Python :: 3",
#     "License :: OSI Approved :: MIT License",
#     "Operating System :: OS Independent",
# ]

[project.urls]
Homepage = "https://github.com/LiteralGenie/ocr_data"
Issues = "https://github.com/LiteralGenie/ocr_data/issues"

[tool.hatch.build.targets.wheel]
packages = ["src"]
